force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <label>Payment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentSchedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>