force-app/main/default/objects/Payment_Schedule__c/fields/CloseToDue__c.field-meta.xml
<CustomField>
    <fullName>CloseToDue__c</fullName>
    <formula>( Scheduled_Payment_Date__c - 7) = Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close to Due</label>
    <type>Checkbox</type>
</CustomField>