force-app/main/default/objects/Payment_Schedule__c/fields/DaysToDue__c.field-meta.xml
<CustomField>
    <fullName>DaysToDue__c</fullName>
    <formula>Scheduled_Payment_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>