force-app/main/default/objects/Payment_Schedule__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PaymentSchedule</relationshipLabel>
    <relationshipName>PaymentSchedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>