force-app/main/default/objects/Payment_Schedule__c/fields/DueMonthYear__c.field-meta.xml
<CustomField>
    <fullName>DueMonthYear__c</fullName>
    <formula>TEXT(MONTH( Scheduled_Payment_Date__c )) 
&amp; &quot;/&quot; &amp; 
TEXT(YEAR(Scheduled_Payment_Date__c ))</formula>
    <label>Due Month/Year</label>
    <type>Text</type>
</CustomField>