force-app/main/default/objects/Payment_Schedule__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>