force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Proposal_of_DHG__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proposal_of_DHG__c</fullName>
    <label>Payment Proposal of DHG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>