force-app/main/default/objects/Payment_Schedule__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>