force-app/main/default/objects/Payment_Schedule__c/fields/Rate_per_sqm_per_year__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sqm_per_year__c</fullName>
    <label>Rate per sqm per year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>