force-app/main/default/objects/Payment_Schedule__c/fields/Receivable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Amount__c</fullName>
    <label>Receivable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>