force-app/main/default/objects/Payment_Schedule__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <formula>IF(  Deal__r.VAT_15__c ,Amount__c /100*15,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>