force-app/main/default/objects/Payment_Schedule__c/fields/X30_days_left__c.field-meta.xml
<CustomField>
    <fullName>X30_days_left__c</fullName>
    <formula>Scheduled_Payment_Date__c = TODAY() + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>30 days left</label>
    <type>Checkbox</type>
</CustomField>