force-app/main/default/objects/Payment_Schedule__c/fields/X60_days_left__c.field-meta.xml
<CustomField>
    <fullName>X60_days_left__c</fullName>
    <formula>Scheduled_Payment_Date__c = TODAY() + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>60 days left</label>
    <type>Checkbox</type>
</CustomField>